--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,12 @@
 #修改内置Tomcat的端口
-server.port=8989
+server.port=9090
 #修改上下文路径
-server.context-path=/api
+#server.context-path=/api
 
 
 
 #数据源配置
+spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/sakila?useUnicode=true&characterEncoding=UTF-8&useSSL=false&autoReconnect=true&autoReconnectForPools=true
 spring.datasource.username=root
