--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,7 +19,11 @@ spring.jpa.show-sql=true
 spring.jackson.serialization.indent-output=true
 
 
-
+# mybatis
+#对应实体类的包名
+mybatis.type-aliases-package=com.springboot.entity
+# mapper.xml文件所在位置
+mybatis.mapper-locations=classpath:com/springboot/mapper/*.xml
 
 #默认情况下，使用Logback作为日志框架
 logging.file=E:/GitHub/springboot/srcmain/resources/static/log/log.log
